--- a/app/src/main/res/layout/activity_eyes_doc3.xml
+++ b/app/src/main/res/layout/activity_eyes_doc3.xml
@@ -8,4 +8,122 @@
     android:background="@drawable/eyesback"
     tools:context=".eyes_doc3">
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="367dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="59dp"
+        android:layout_marginEnd="201dp"
+        android:transitionName="imagetransaction3"
+        app:srcCompat="@drawable/eyes_pic3" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageView5"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-200dp"
+        android:layout_marginTop="109dp"
+        android:layout_marginBottom="270dp"
+        android:layout_toEndOf="@+id/imageView5"
+        android:foregroundGravity="center"
+        android:gravity="center"
+        android:text="Dr.. Emad Eddin"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:transitionName="nametransaction3" />
+
+    <TextView
+        android:id="@+id/textView32"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="-200dp"
+        android:layout_marginTop="-250dp"
+        android:layout_marginEnd="20dp"
+        android:layout_toEndOf="@+id/imageView5"
+        android:text="Professor of Pulmonary Medicine and Allergy, Faculty of Medicine, Alexandria University
+Consultant bronchoscopy and thoracic intensive care."
+        android:textColor="@color/gray"
+        android:textSize="16sp"
+        android:transitionName="desctransaction3" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/imageView5"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="33dp"
+        app:srcCompat="@drawable/call_icon" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="33dp"
+        app:srcCompat="@drawable/location_icon" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/imageView7"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="33dp"
+        app:srcCompat="@drawable/money_icon" />
+
+    <TextView
+        android:id="@+id/textView31"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView7"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="40dp"
+        android:layout_toEndOf="@+id/imageView8"
+        android:text="250 EGP"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="normal" />
+
+    <TextView
+        android:id="@+id/textView33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="23dp"
+
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="20dp"
+        android:layout_toEndOf="@+id/imageView7"
+        android:text="8 College of Medicine Street, Doctors Tower, Raml Station
+Raml Station - Alexandria"
+        android:textColor="@color/black"
+        android:textStyle="normal" />
+
+    <TextView
+        android:id="@+id/textView34"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView5"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="40dp"
+        android:layout_toEndOf="@+id/imageView"
+        android:text="4855593"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="normal" />
+
+
 </RelativeLayout>
