--- a/app/src/main/res/layout/activity_eyes_doc5.xml
+++ b/app/src/main/res/layout/activity_eyes_doc5.xml
@@ -8,4 +8,122 @@
     android:background="@drawable/eyesback"
     tools:context=".eyes_doc5">
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="347dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="59dp"
+        android:layout_marginEnd="201dp"
+        android:transitionName="imagetransaction5"
+        app:srcCompat="@drawable/eyes_pic6" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageView5"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-200dp"
+        android:layout_marginTop="109dp"
+        android:layout_marginBottom="270dp"
+        android:layout_toEndOf="@+id/imageView5"
+        android:foregroundGravity="center"
+        android:gravity="center"
+        android:text="Dr.Haitham Sami"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:transitionName="nametransaction5" />
+
+    <TextView
+        android:id="@+id/textView32"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="-200dp"
+        android:layout_marginTop="-250dp"
+        android:layout_marginEnd="20dp"
+        android:layout_toEndOf="@+id/imageView5"
+        android:text="Chest Diseases Consultant. Chest and Respiratory Doctor specialized in Adult Chest and Respiratory."
+        android:textColor="@color/gray"
+        android:textSize="16sp"
+        android:transitionName="desctransaction5" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/imageView5"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="33dp"
+        app:srcCompat="@drawable/call_icon" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="33dp"
+        app:srcCompat="@drawable/location_icon" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/imageView7"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="33dp"
+        app:srcCompat="@drawable/money_icon" />
+
+    <TextView
+        android:id="@+id/textView31"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView7"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="40dp"
+        android:layout_toEndOf="@+id/imageView8"
+        android:text="500 EGP"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="normal" />
+
+    <TextView
+        android:id="@+id/textView33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="23dp"
+
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="20dp"
+        android:layout_toEndOf="@+id/imageView7"
+        android:text="8 El Fardous Buildings - Taqa Street - Behind Al Ahly Club - Nasr City / 39 Cleopatra Street - Salah El Din Square - Heliopolis - Cairo, Nasr City
+"
+        android:textColor="@color/black"
+        android:textStyle="normal" />
+
+    <TextView
+        android:id="@+id/textView34"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView5"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="40dp"
+        android:layout_toEndOf="@+id/imageView"
+        android:text="01023177777"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="normal" />
+
+
+
 </RelativeLayout>
