--- a/app/src/main/res/layout/activity_patient_edit.xml
+++ b/app/src/main/res/layout/activity_patient_edit.xml
@@ -45,16 +45,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/rectangle_28" />
 
-    <TextView
+    <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="335dp"
         android:layout_height="48dp"
         android:layout_marginTop="55dp"
         android:background="@drawable/input"
+        android:backgroundTintMode="add"
         android:ems="10"
-        android:text="Fullname"
+        android:hint="FullName"
+        android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColorHint="#ACACAC"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +87,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
         tools:ignore="TouchTargetSizeCheck" />
 
-    <TextView
+    <EditText
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="335dp"
         android:layout_height="48dp"
