--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -11,7 +11,7 @@
 
         <item android:id="@+id/doctors"
             android:title="@string/doctors"
-            android:icon="@drawable/doctor_icon"/>
+            android:icon="@drawable/doc_icon"/>
 
         <item android:id="@+id/about_us"
             android:title="@string/about_us"
