--- a/app/src/main/res/layout/activity_eyes_doctors.xml
+++ b/app/src/main/res/layout/activity_eyes_doctors.xml
@@ -78,7 +78,7 @@
                 android:layout_toEndOf="@+id/eyes_doctor1"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Nermin Diab"
+                android:text="Dr. Amr said"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -92,8 +92,7 @@
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/eyes_doctor1"
-                android:text="Kidney and diabetes consultant
-Nephrologist specialized in Adult ..."
+                android:text="Lecturer of ophthalmology and surgery, Faculty of Medicine, Alexandria ..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction" />
@@ -128,7 +127,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Maged Habib "
+                android:text="Dr. Rasha Moussa "
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -144,7 +143,8 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/eyes_doctor2"
-                android:text="Consultant of Nephrology, Diabetes, Internal Medicine, Immunology ..."
+                android:text="Consultant Cataract Surgeon / MD Ophthalmology.
+Fellow of the Royal..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction2" />
@@ -183,7 +183,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_toEndOf="@+id/eyes_doctor3"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Nermin Diab"
+                android:text="Dr. Amr Hussein"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -197,8 +197,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/eyes_doctor3"
-                android:text="Kidney and diabetes consultant
-Nephrologist specialized in Adult ..."
+                android:text="Consultant of ophthalmology and LASIK at the International Medical CenterDoctor of ophthalmology  ..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction3" />
@@ -233,7 +232,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Maged Habib "
+                android:text="Dr. Youmna Amr"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -249,7 +248,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/eyes_doctor4"
-                android:text="Consultant of Nephrology, Diabetes, Internal Medicine, Immunology ..."
+                android:text="MD Ophthalmology - Consultant of plastic surgery of the eyelids ..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction4" />
@@ -288,7 +287,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_toEndOf="@+id/eyes_doctor5"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Nermin Diab"
+                android:text="Dr. Amr Rady"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -302,8 +301,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/eyes_doctor5"
-                android:text="Kidney and diabetes consultant
-Nephrologist specialized in Adult ..."
+                android:text="Instructor of ophthalmology and laser, ophthalmologist specialized in LASIK..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction5" />
@@ -338,7 +336,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Maged Habib "
+                android:text="Dr. Isis Sayed "
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -354,7 +352,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/eyes_doctor6"
-                android:text="Consultant of Nephrology, Diabetes, Internal Medicine, Immunology ..."
+                android:text="Ophthalmologist specialized in Adult Eyes, Retinal and Vitreous Surgery, Pediatric ..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction6" />
