--- a/app/src/main/res/layout/activity_eyes_doc2.xml
+++ b/app/src/main/res/layout/activity_eyes_doc2.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Fatima Zahra"
+        android:text="Dr. Rasha Moussa"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -43,10 +43,11 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="40dp"
         android:layout_marginTop="26dp"
-        android:layout_marginEnd="-185dp"
+        android:layout_marginEnd="-165dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="
-Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Chest and Respiratory Diseases Specialized in Autoimmune Diseases, Adult Allergy and Immunology."
+        android:text="Consultant Cataract Surgeon / MD Ophthalmology.
+Fellow of the Royal College of Surgeons of Glasgow.
+Harvard Teaching Training Fellowship."
         android:textColor="@color/gray"
         android:textSize="16sp"
         android:transitionName="desctransaction2" />
@@ -89,7 +90,7 @@ Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Ches
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="400 EGP"
+        android:text="250 EGP"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -105,7 +106,7 @@ Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Ches
         android:layout_marginTop="40dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Dar Al Fouad Hospital (Nasr City)"
+        android:text="25 Mohy El-Din Abou El Ezz Street - first floor , cairo"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -117,7 +118,7 @@ Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Ches
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="01002222545"
+        android:text="01211033637"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
