--- a/app/src/main/res/layout/activity_eyes_doc6.xml
+++ b/app/src/main/res/layout/activity_eyes_doc6.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Amani Khalil"
+        android:text="Dr.Isis Sayed"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -45,8 +45,7 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="-185dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="Master of Chest Diseases and Allergy (Ain Shams University)
-Chest and Allergy Specialist
+        android:text="Ophthalmologist specialized in Adult Eyes, Retinal and Vitreous Surgery, Pediatric Ophthalmology and Lasik, Vision Correction and Cataract
 "
         android:textColor="@color/gray"
         android:textSize="16sp"
@@ -90,7 +89,7 @@ Chest and Allergy Specialist
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="140 EGP"
+        android:text="200 EGP"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -106,8 +105,7 @@ Chest and Allergy Specialist
         android:layout_marginTop="30dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="6056 Al-Miraj City - Zahraa El-Maadi, next to Aba El-Dahab Ceramic, Cairo, Cairo Governorate, Egypt 6056
-
+        android:text="Al-Ahram Gardens 184 Army Road - Zone A, Hadayek Al-Ahram, Fourth Gate - next to El Far Pharmacy
 "
         android:textColor="@color/black"
         android:textStyle="normal" />
@@ -120,7 +118,7 @@ Chest and Allergy Specialist
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="01155175888"
+        android:text="01201111344"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
