--- a/app/src/main/res/layout/activity_skin_doctors.xml
+++ b/app/src/main/res/layout/activity_skin_doctors.xml
@@ -129,7 +129,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Maged Habib "
+                android:text="Dr. Maher Mahmoud "
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -145,7 +145,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/skin_doc2"
-                android:text="Consultant of Nephrology, Diabetes, Internal Medicine, Immunology ..."
+                android:text="Consultant of dermatology and cosmetology and consultant of genitourinary diseases ..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction2" />
