--- a/app/src/main/res/layout/activity_skin_doc4.xml
+++ b/app/src/main/res/layout/activity_skin_doc4.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="154dp"
         android:layout_marginTop="42dp"
         android:transitionName="imagetransaction4"
-        app:srcCompat="@drawable/skin_pic4" />
+        app:srcCompat="@drawable/skin_pic6" />
 
     <TextView
         android:id="@+id/textView6"
@@ -29,7 +29,7 @@
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Maged Habib "
+        android:text="@string/dr_mohamed_el_samlawy"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -45,9 +45,7 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="-185dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="Consultant of Nephrology, Diabetes,
-         Internal Medicine, Immunology and Thyroid Diseases
-         (Nephrologist specialized in adult diabetes and endocrinology, general internal medicine and adult nephrology)
+        android:text="Dermatologist specialized in plastic surgery, burns, plastic surgery and laser, venereal diseases, dermatology, plastic surgery, plastic surgery, dermatology, pediatric dermatology
 "
         android:textColor="@color/gray"
         android:textSize="16sp"
@@ -91,7 +89,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="300 EGP"
+        android:text="350 EGP"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -104,11 +102,10 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="23dp"
 
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Street 105, Cairo, Maadi
-"
+        android:text="El-Khalifa El-Maamoun, Mansheya El-Bakry, Heliopolis, Cairo"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -120,7 +117,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="02 25262688"
+        android:text="0100 500 6115"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
