--- a/app/src/main/res/layout/activity_skin_doc6.xml
+++ b/app/src/main/res/layout/activity_skin_doc6.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="154dp"
         android:layout_marginTop="42dp"
         android:transitionName="imagetransaction6"
-        app:srcCompat="@drawable/skin_pic6" />
+        app:srcCompat="@drawable/skin_pic4" />
 
     <TextView
         android:id="@+id/textView6"
@@ -29,7 +29,7 @@
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Maged Habib "
+        android:text="Dr. Hany Khalil"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -43,11 +43,9 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="40dp"
         android:layout_marginTop="26dp"
-        android:layout_marginEnd="-185dp"
+        android:layout_marginEnd="-165dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="Consultant of Nephrology, Diabetes,
-         Internal Medicine, Immunology and Thyroid Diseases
-         (Nephrologist specialized in adult diabetes and endocrinology, general internal medicine and adult nephrology)
+        android:text="Dermatologist specialized in Adult Dermatology, Cosmetic and Laser, Genital Diseases, Andrology, Pediatric Dermatology, Eye Plastic Surgery and Facial Plastic Surgery
 "
         android:textColor="@color/gray"
         android:textSize="16sp"
@@ -104,10 +102,10 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="23dp"
 
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Street 105, Cairo, Maadi
+        android:text="370 Faisal Main Street, Tamimi station, in front of Twinki, second floor, Faisal
 "
         android:textColor="@color/black"
         android:textStyle="normal" />
@@ -120,7 +118,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="02 25262688"
+        android:text="0115 637 0101"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
