--- a/app/src/main/res/layout/activity_successful.xml
+++ b/app/src/main/res/layout/activity_successful.xml
@@ -27,7 +27,7 @@
         android:background="@drawable/custom_button"
         android:backgroundTintMode="add"
         android:fontFamily="sans-serif"
-        android:text="Done"
+        android:text="Continue"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/white"
