--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,10 +15,14 @@
     <color name="color6">#103870</color>
     <color name="color7">#073b85</color>
     <color name="color8">#E7F5FE</color>
+    <color name="color9">#ffffff</color>
 
 
     <color name="transpatent">#cccccc</color>
     <color name="colorActive">#d4d4d4</color>
     <color name="gray">#908F8F</color>
+    
+    <color name="tab_gray">#c0c0c0</color>
+    <color name="intro_des_color">#656565</color>
 
 </resources>
