--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -13,6 +13,10 @@
             android:title="@string/doctors"
             android:icon="@drawable/doc_icon"/>
 
+        <item android:id="@+id/chat"
+            android:title="@string/chat"/>
+
+
         <item android:id="@+id/about_us"
             android:title="@string/about_us"
             android:icon="@drawable/about"/>
