--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="color10">#EAE9E9</color>
     <color name="color11">#20FFFFFF</color>
     <color name="error">#B00020</color>
+    <color name="input">#ECECEC</color>
 
 
     <color name="transpatent">#cccccc</color>
